--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="banner-text text-center" style="text-shadow: 1px 1px 1px #000;">
                     <h1>BLUEPRINT LOGIC</h1>
-                    <img src="//www.blueprintlogic.com/images/bpl-logo.png" style="width:10%;">
+                    <img src="images/bpl-logo.png" style="width:10%;">
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
                         <img alt="" class="img-responsive" src="images/adobe.png">
                         <div class="person-content">
                             <h5 class="role">Adobe Business Solutions</h5>
-                            <p>Adobe Marketing Cloud, Analytics, Audience Manager, Campaign, Experience Manager, Social, Target, Activation (Dynamic Tag Manager)</p>
+                            <p>Adobe Marketing Cloud: Analytics, Audience Manager, Target, Dynamic Tag Manager, Experience Manager</p>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         <img alt="" class="img-responsive" src="images/google.png">
                         <div class="person-content">
                             <h5 class="role">Google Business Solutions</h5>
-                            <p>Analytics, AdWords, AdSense, Shopping Campaigns, DoubleClick for Publishers, Tag Manager, Search - Mobile - Display Advertising</p>
+                            <p>Analytics, AdWords, AdSense, Shopping Campaigns, DoubleClick, Tag Manager, Search/Mobile/Display Advertising</p>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                         <img alt="" class="img-responsive" src="images/python.png">
                         <div class="person-content">
                             <h5 class="role">Application &amp; Programming</h5>
-                            <p>Computer, Mobile, Web, Email and Application Programming, Data Sciences, Cloud Computing, Machine Learning, Algorithms</p>
+                            <p>Computer, Mobile, Web &amp; Application Programming &amp; Data Sciences</p>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                         <img alt="" class="img-responsive" src="images/ecommerce.png">
                         <div class="person-content">
                             <h5 class="role">eCommerce</h5>
-                            <p>Custom eCommerce Applications and Modifications, Modules, Importing and Updating Products, Specialized eCommerce Hosting</p>
+                            <p>Custom eCommerce Applications &amp; Modifications</p>
                         </div>
                     </div>
                 </div>
@@ -164,9 +164,11 @@
     </section>
 
     <footer class="footer">
+        <!--
         <div class="footer-top" style="background-color:#fff;color:000;">
             <img alt="" src="images/lasvegas.png">
         </div>
+        -->
         <div class="footer-bottom">
             <div class="container">
                 <div class="col-md-12">
