updated css, centered txt and margin auto img

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
     .footer .footer-col {
         margin-bottom: 50px;
     }
+    .person {
+        margin: auto;
+        text-align: center;
+    }
     .person h5 {text-align:center;}
     .btn {
         background-color: #084284;
