--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
         background-color: #084284;
         border-color: #0D519E;
     }
+    @media screen and (min-width: 769px){
     .col-md-3 {
         width: 33.3%;
+    }
     }
     </style>
 
