--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
+
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width,initial-scale=1,maximum-scale=1" name="viewport">
-    <title>Analytics and Web Development | Blueprint Logic</title>
+    <title>Blueprint Logic</title>
     <meta content="Blueprint Logic is a web development and analytics firm that specializes in data driven progression to attain best-in-class results." name="description">
     <meta content="Web Development and Analytics Architecture and Data Science" name="keywords">
     <meta content="index, follow" name="robots">
@@ -53,175 +54,52 @@
     <meta content="mstile-310x150.png" name="msapplication-wide310x150logo">
     <meta content="mstile-310x310.png" name="msapplication-square310x310logo">
     <link href="css/all.min.css" rel="stylesheet">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "LocalBusiness",
-      "name" : "Blueprint Logic",
-      "description": "Analytics and Web Development",
-      "email": "info@blueprintlogic.com",
-      "url": "https://www.blueprintlogic.com/"
-    }
+        {
+            "@context": "http://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Blueprint Logic",
+            "description": "Analytics and Web Development",
+            "email": "info@blueprintlogic.com",
+            "url": "https://www.blueprintlogic.com/"
+        }
     </script>
     <style>
-    .banner {
-    min-height: 350px;
-    }
-    .banner-text {
-    padding-top: 5%;
-    }
-    .nav-toggle::after, .nav-toggle:before {
-    background-color: #0D519E !important;
-    }
-    .footer {
-    border-top: 4px solid #0d519e;
-    border-bottom: 20px solid #0d519e;
-    }
-    .banner {
-    border-bottom: 5px solid #000;
-    }
-    .footer .footer-col {
-        margin-bottom: 50px;
-    }
-    .person {
-        margin: auto;
-        text-align: center;
-    }
-    .person h5 {text-align:center;}
-    .btn {
-        background-color: #084284;
-    }
-    .btn:focus, .btn:hover {
-        background-color: #0D519E;
-    }
-    .feature .icon, .person h5 {
-        color: #0D519E;
-    }
-    .footer a:hover {
-        color: #efefef;
-        text-shadow:1px 1px 1px #000;
-    }
-    .footer .footer-share a:hover, .social-icons a:hover {
-        background-color: #084284;
-        border-color: #0D519E;
-    }
-    @media screen and (min-width: 769px){
-    .col-md-3 {
-        width: 33.3%;
-    }
-    }
+        img {
+            width: 33%;
+        }
+
+        div {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 40%;
+            height: auto;
+            padding: 20px;
+            color: white;
+            text-align: center;
+        }
+
+        p {
+            position: absolute;
+            bottom: 0;
+            right: 10%;
+        }
     </style>
 
 </head>
+
 <body>
-<!-- git -->
-    <section class="banner" role="banner">
-
-        <div class="container">
-            <div class="col-md-10 col-md-offset-1">
-                <div class="banner-text text-center" style="text-shadow: 1px 1px 1px #000;">
-                    <h1>BLUEPRINT LOGIC</h1>
-                    <img src="images/bpl-logo.png" style="width:10%;">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="section teams" id="teams">
-        <div class="container">
-            <div class="row">
-                <h4 class="clients">< What We Do /></h4><br />
-                <div class="col-md-3 col-sm-6">
-                    <div class="person">
-                        <img alt="" class="img-responsive" src="images/adobe.png">
-                        <div class="person-content">
-                            <h5 class="role">Adobe Business Solutions</h5>
-                            <p>Adobe Marketing Cloud: Analytics, Audience Manager, Target, Dynamic Tag Manager, Experience Manager</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="person">
-                        <img alt="" class="img-responsive" src="images/google.png">
-                        <div class="person-content">
-                            <h5 class="role">Google Business Solutions</h5>
-                            <p>Analytics, AdWords, AdSense, Shopping Campaigns, DoubleClick, Tag Manager, Search/Mobile/Display Advertising</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="person">
-                        <img alt="" class="img-responsive" src="images/python.png">
-                        <div class="person-content">
-                            <h5 class="role">Application &amp; Programming</h5>
-                            <p>Computer, Mobile, Web &amp; Application Programming &amp; Data Sciences, Custom eCommerce Applications &amp; Modifications</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <!--
-        <div class="footer-top" style="background-color:#fff;color:000;">
-            <img alt="" src="images/lasvegas.png">
-        </div>
-        -->
-        <div class="footer-bottom">
-            <div class="container">
-                <div class="col-md-12">
-                    <p>&copy; 
-                    <script defer>
-                    document.write((new Date).getFullYear());
-                    </script> <span itemprop="name">Blueprint Logic LLC</span> &mdash; <span itemprop="url">blueprintlogic.com</span> &mdash; Analytics and Web Development</p>
-                    <p>
-					<script language="JavaScript" type="text/javascript">
-					TrustLogo("https://www.blueprintlogic.com/img/ssl/comodo_secure_seal_113x59_transp.png", "CL1", "none");
-					</script>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <script type="text/javascript" async defer src="js/all.min.js"></script>
-
-    <!-- Start Open Web Analytics Tracker -->
-    <script type="text/javascript">
-    //<![CDATA[
-    var owa_baseUrl = 'https://www.blueprintlogic.com/owa/';
-    var owa_cmds = owa_cmds || [];
-    owa_cmds.push(['setSiteId', 'e21a846267b0c5caf7c1d41333bff4f2']);
-    owa_cmds.push(['trackPageView']);
-    owa_cmds.push(['trackClicks']);
-    owa_cmds.push(['trackDomStream']);
-    
-    (function() {
-    	var _owa = document.createElement('script'); _owa.type = 'text/javascript'; _owa.async = true;
-    	owa_baseUrl = ('https:' == document.location.protocol ? window.owa_baseSecUrl || owa_baseUrl.replace(/http:/, 'https:') : owa_baseUrl );
-    	_owa.src = owa_baseUrl + 'modules/base/js/owa.tracker-combined-min.js';
-    	var _owa_s = document.getElementsByTagName('script')[0]; _owa_s.parentNode.insertBefore(_owa, _owa_s);
-    }());
-    //]]>
-    </script>
-    <!-- End Open Web Analytics Code -->
-
-    <!-- Start W3 Counter -->
-    <script src="https://www.w3counter.com/tracker.js?id=106058"></script>
-    <!-- End W3 Counter -->
-
-    <!-- Start Google Analytics -->
-    <script type="text/javascript" defer>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-50118159-1', 'blueprintlogic.com');
-      ga('send', 'pageview');
-    </script>
-    <!-- End Google Analytics -->
-
+    <div>
+        <img src="http://blueprintlogic.com/images/bpl-logo.png">
+    </div>
+    <p>&copy;
+        <script defer>
+            document.write((new Date).getFullYear());
+        </script> <span itemprop="name">Blueprint Logic LLC</span> &mdash; <span itemprop="url">blueprintlogic.com</span></p>
+    <p>
 </body>
+
 </html>
