removed all https and replaced with http

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta content="Web Development and Analytics Architecture and Data Science" name="keywords">
     <meta content="index, follow" name="robots">
     <meta content="Blueprint Logic" name="author">
-    <link href="https://www.blueprintlogic.com" rel="canonical">
+    <link href="http://www.blueprintlogic.com" rel="canonical">
     <meta content="en_US">
     <meta content="website">
     <meta content="Blueprint Logic | Analytics and Web Development">
@@ -30,9 +30,9 @@
     <meta content="//blueprintlogic.com/img/bpl.png" name="twitter:image:src">
     <meta property="og:title" content="Blueprint Logic">
     <meta property="og:description" content="Web Development and Analytics" />
-    <meta property="og:url" content=" https://www.blueprintlogic.com/">
+    <meta property="og:url" content=" http://www.blueprintlogic.com/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.blueprintlogic.com/img/bpl.png" />
+    <meta property="og:image" content="http://www.blueprintlogic.com/img/bpl.png" />
     <link href="img/logos/apple-touch-icon-57x57.png" rel="apple-touch-icon-precomposed" sizes="57x57">
     <link href="img/logos/apple-touch-icon-114x114.png" rel="apple-touch-icon-precomposed" sizes="114x114">
     <link href="img/logos/apple-touch-icon-72x72.png" rel="apple-touch-icon-precomposed" sizes="72x72">
@@ -60,7 +60,7 @@
             "name": "Blueprint Logic",
             "description": "Analytics and Web Development",
             "email": "info@blueprintlogic.com",
-            "url": "https://www.blueprintlogic.com/"
+            "url": "http://www.blueprintlogic.com/"
         }
     </script>
     <style>
