--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
     <div>
         <img src="http://blueprintlogic.com/images/bpl-logo.png">
     </div>
+    <!-- Start Google Analytics -->
+    <script type="text/javascript" defer>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-50118159-1', 'blueprintlogic.com');
+        ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
 </body>
 
 </html>
